feat: Add testnet bonus
